# python-data-ull

./: 00_google_colab_setup.ipynb  01_anaconda_notebooks.ipynb  02_pandas.ipynb  03_pivotacion_tablas.ipynb  04_apis.ipynb  04_visualizacion_intro.ipynb  05_bases_de_datos.ipynb  05_graficos_seaborn.ipynb  06_graficos_mapas.ipynb  06_visualizacion_intro.ipynb  07_graficos_seaborn.ipynb  08_graficos_mapas.ipynb  09_web_scraping.ipynb  Pipfile  README.md  pyproject.toml  requirements.txt
dat/: pob_canarias.csv  pob_canarias_crudo.csv
