[project]
name = "ull-python-data"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
